kong-builders/12-01-2021/2_backtofuture_quote_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/version: 0.0.4-SNAPSHOT
    app.kubernetes.io/name: back2future-quote-service
  name: back2future-quote-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 0.0.4-SNAPSHOT
      app.kubernetes.io/name: back2future-quote-service
  template:
    metadata:
      labels:
        app.kubernetes.io/version: 0.0.4-SNAPSHOT
        app.kubernetes.io/name: back2future-quote-service
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUOTE_SERVICE
              value: backToFuture
          image: gamussa/native-quote-service:0.0.4-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: back2future-quote-service
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: back2future-quote-service
    app.kubernetes.io/version: 0.0.4-SNAPSHOT
  name: back2future-quote-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: back2future-quote-service
    app.kubernetes.io/version: 0.0.4-SNAPSHOT
  type: ClusterIP
