kong-builders/12-01-2021/3_backtofuture_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backtofuture
spec:
  hosts:
    - 'backtofuture.dev'
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: back2future-quote-service.kong-builders.svc.cluster.local
            port:
              number: 80
