kong-builders/12-01-2021/3_chuck_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck
spec:
  hosts:
    - 'chuck.dev'
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: chuck-quote-service.kong-builders.svc.cluster.local
            port:
              number: 80
